argocd/aws/666628074417/clusters/cbioportal-prod/apps/oncotree/oncotree-eks-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: eks-oncotree
  name: eks-oncotree
spec:
  replicas: 1
  selector:
    matchLabels:
      run: eks-oncotree
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: eks-oncotree
    spec:
      volumes:
      - name: oncotree-ssl-volume
        secret:
          secretName: oncotree-ssl
          defaultMode: 0600
          items:
          - key: oncotree_graphite_private_key_ecdsa1
            path: graphite-ssl-key
      - name: oncotree-cache
        persistentVolumeClaim:
          claimName: oncotree-pvc
      containers:
      - envFrom:
        - secretRef:
            name: oncotree-eks
        image: cbioportal/oncotree:20251032_5193902de37
        command: ["/bin/sh", "-c"]
        args: ["autossh -i /oncotree-ssl/graphite-ssl-key -M 0 -N -L 127.0.0.1:8443:msk-priv.synaptica.net:443 -L 127.0.0.1:7200:msk-priv.synaptica.net:7200 res_msk_cbioportal@msk-jump.synaptica.net & java -Dspringfox.documentation.swagger.v2.path=/api-docs -Dserver.port=8080 -Dgraphite.url=http://localhost:7200/repositories/graphite -Dgraphite.username=$(GRAPHITE_USERNAME) -Dgraphite.password=$(GRAPHITE_PASSWORD) -Dgraphite.oncotree_namespace_prefix=http://data.mskcc.org/ontologies/oncotree# -D [...]
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 1
          failureThreshold: 5
        name: oncotree
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: "/data/ehcache/"
          name: oncotree-cache
        - name: oncotree-ssl-volume
          mountPath: "/oncotree-ssl/graphite-ssl-key"
          subPath: graphite-ssl-key
        resources:
          requests:
              cpu: 100m
              memory: 1Gi
          limits:
              memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on big memory machine
      nodeSelector:
        workload: oncotree
      tolerations:
        - key: workload
          value: oncotree
          effect: NoSchedule
          operator: Equal
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: eks-oncotree
  name: eks-oncotree
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    run: eks-oncotree
  type: ClusterIP
