argocd/aws/666628074417/clusters/cbioportal-prod/apps/oncotree/oncotree-new-eks-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: new-eks-oncotree
  name: new-eks-oncotree
spec:
  replicas: 1
  selector:
    matchLabels:
      run: new-eks-oncotree
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: new-eks-oncotree
    spec:
      containers:
      - image: mskcc/oncotree:2.1.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 10
          periodSeconds: 1
          failureThreshold: 5
        name: oncotree
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
              cpu: 100m
              memory: 1Gi
          limits:
              memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # run on big memory machine
      nodeSelector:
        workload: oncotree
      tolerations:
        - key: workload
          value: oncotree
          effect: NoSchedule
          operator: Equal
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: dockerhub-creds
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: new-eks-oncotree
  name: new-eks-oncotree
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    run: new-eks-oncotree
  type: ClusterIP
