argocd/aws/666628074417/clusters/cbioportal-prod/apps/oncotree/oncotree-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncotree-ingress
  namespace: oncotree
  annotations:
    argocd.argoproj.io/tracking-id: oncotree:networking.k8s.io/Ingress:oncotree/oncotree-ingress
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  ingressClassName: nginx
  rules:
    - host: oncotree.cbioportal.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: oncotreedev.cbioportal.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: oncotree.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.oncotree.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: www.oncotree.org
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: oncotree.info
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: oncotree.org
      http:
        paths:
          - backend:
              service:
                name: new-eks-oncotree
                port:
                  number: 80
            path: /
            pathType: Prefix
